2010-05-26  Jeremy Orlow  <jorlow@chromium.org>

Unreviewed chromium build fix
        https://bugs.webkit.org/show_bug.cgi?id=39739

        The backwards compat function needs to take in a WebSecurityOrigin
        instead of a WebString.

        * public/WebIndexedDatabase.h:
        (WebKit::WebIndexedDatabase::open):

Canonical link: https://commits.webkit.org/51290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60239 268f45cc-cd09-0410-ab3c-d52691b4dbfc