WebKit/chromium/public/WebIndexedDatabase.h
@@ -54,13 +54,13 @@ public:
     virtual void open(const WebString& name, const WebString& description,
                       WebIDBCallbacks* callbacks, const WebSecurityOrigin& origin, WebFrame* webFrame, int& exceptionCode)
     {
-        open(name, description, false, callbacks, origin.toString(), webFrame, exceptionCode);
+        open(name, description, false, callbacks, origin, webFrame, exceptionCode);
     }
     // FIXME: Delete soon.  Compatability hack.
     virtual void open(const WebString& name, const WebString& description, bool modifyDatabase,
-                      WebIDBCallbacks* callbacks, const WebString& origin, WebFrame* webFrame, int& exceptionCode)
+                      WebIDBCallbacks* callbacks, const WebSecurityOrigin& origin, WebFrame* webFrame, int& exceptionCode)
     {
-        open(name, description, callbacks, WebSecurityOrigin::createFromString(origin), webFrame, exceptionCode);
+        open(name, description, callbacks, origin, webFrame, exceptionCode);
     }
 };
 
